# OPC-UA-client

./: Dockerfile  Makefile  README.custom-docker-compose.md  README.md  docker-compose.server.yml  docker-compose.yaml  pyproject.toml
examples/: config.docker.yaml  config.edge.yaml  config.prosys.server.yaml  mock_opcua_server.py
opc_ua_client_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runtime-config/: config.full.docker.yaml
src/: bootstrap.py  main.py  runtime.py
src/adapters/buffer/: __init__.py  factory.py  redis_buffer.py
src/adapters/logging/: setup.py
src/adapters/metrics/: __init__.py  registry.py
src/adapters/opcua/: __init__.py  client.py
src/adapters/publisher/: __init__.py  factory.py  noop.py  rabbitmq.py
src/config/: models.py  settings.py  store.py
src/domain/entities/: __init__.py  enums.py  errors.py  models.py
src/domain/ports/: __init__.py  buffer.py  publisher.py
src/domain/quality/: __init__.py  interpreter.py
src/domain/services/: buffer_worker.py  health.py  pipeline.py
src/domain/transform/: __init__.py  normalizer.py
src/domain/validation/: engine.py
src/modules/connections/: __init__.py  manager.py
src/modules/subscriptions/: registry.py
src/presenters/rest/: runtime.py
src/presenters/rest/api/: __init__.py  routes.py
tests/: __init__.py  conftest.py
tests/integration/: helpers.py  test_buffer_retry.py  test_opcua_integration.py
tests/unit/: test_config_store.py  test_metrics_registry.py  test_node_registry.py  test_opcua_browse.py  test_opcua_write.py  test_pipeline.py  test_quality.py  test_rabbitmq_publisher.py  test_redis_buffer.py  test_validation.py
