[project]
name = "opc-ua-client-service"
version = "0.1.0"
description = "OPC UA Client microservice для промышленной платформы данных"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aio-pika>=9.5.5,<10.0.0",
    "asyncua>=1.1.5,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "redis>=5.2.1,<6.0.0",
    "structlog>=24.4.0,<25.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "fakeredis>=2.31.1,<3.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "types-PyYAML>=6.0.12.20250915",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["src"]
command_line = "-m pytest"

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = false
skip_empty = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".venv313",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",
    "E501",
    "RUF001",
    "RUF002",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "B017",
]

[[tool.mypy.overrides]]
module = ["asyncua", "asyncua.*"]
ignore_missing_imports = true
